<resources>
    <string name="app_name">Asia Tour</string>
    <string name="home">Home</string>
    <string name="sholat">Sholat</string>
    <string name="kiblat">Kiblat</string>
    <string name="kesehatan">Kesehatan</string>
    <string name="account">Account</string>
    <string name="lokasi">atur lokasi</string>
    <string name="title_activity_maps">Map</string>
    <string name="aturLokasi">atur lokasi</string>
    <string name="tab_1">tamattu</string>
    <string name="tab_2">qiran</string>
    <string name="tab_3">ifrad</string>
    <string name="title_tamattu">kdnkfn</string>
    <string name="toolbar">fiqih haji</string>
    <string name="home_toolbar">asia  tour</string>
    <string name="sholat_toolbar">jadwal sholat</string>
    <string name="keutamaan">Keutamaan Haji</string>
    <string name="bagian1">1. Rukun Islam yang Kelima</string>
    <string name="quran1">Q.S Ali imran : 97</string>
    <string name="hadis1">HR. bukhori no. 8</string>
    <string name="hadis2">HR. muslim no 16</string>
    <string name="bagian2">2. Mendapatkan Surga</string>
    <string name="bagian3">3. Menghilangkan Dosa dan Kemiskinan</string>
    <string name="hadis3">HR. Bukhori 1773</string>
    <string name="hadis4">HR. Muslim no 1349</string>
    <string name="hadis5">HR Abu Hurairah r.a</string>
    <string name="hadis6">HR. Tirmidzi dan An-Nasa\'i</string>
    <string name="hadis7">As-Shahihah no 1200</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>
    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>
    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>
    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="desc1">Terdapat dalam Al-Qur\'an dan Hadist, sebagai berikut :</string>
    <string name="desc2">Terdapat dalam Hadist, sebagai berikut :</string>
    <string name="desc3">Terdapat dalam hadist, sebagai berikut :</string>
    <string name="desc4">di shahihkan oleh Albani dalam</string>
    <string name="bagian4">4. Haji merupakan Jihad bagi Wanita</string>
    <string name="hadis8">HR. Bukhori no 1520</string>
    <string name="hadis9">HR. ibnu majah no 2901</string>
    <string name="desc5">di shahihkan Albani dalam</string>
    <string name="hadis10">Al-Irwaa no 981</string>
    <string name="bagian5">5. Bagi laki-laki Haji Mabrur merupakan amalan terbaik setelah Jihad</string>
    <string name="hadis11">HR. Bukhori no 26</string>
    <string name="hadis12">Muslim no 1350</string>
    <string name="bagian6">6. Menghapus Seluruh Dosa</string>
    <string name="hadis13">HR. Bukhori no 1521</string>
    <string name="hadis14">Muslim no 1350</string>
    <string name="bagian7">7. Pahala Berlimpah ruah</string>
    <string name="hadis15">Shahh Ibnu Khuzaimah no 1984</string>
    <string name="desc6">dinyatakan oleh syekh Albani</string>
    <string name="hadis16">Hasan Lighairihi</string>
    <string name="Jamaah">Jamaah Haji Tamu Allah</string>
    <string name="quran2">Q.S Al-Hajj : 27</string>
    <string name="hadis17">HR. Ibnu Majah no 2884</string>
    <string name="hadis18">HR. Bukhari no 1593</string>
    <string name="desc7">di hasankan oleh albani</string>
    <string name="hadis19">As-Shahihah no 1820</string>
    <string name="Predikat">Segera mendapat predikat \"Tamu Allah\"</string>
    <string name="hadis20">HR. Ibnu Majah no 2884</string>
    <string name="desc8">di shahihkan albani tetapi di lemahkan beberapa ulama</string>
    <string name="hadis21">HR. Ibnu MAjah no 2874</string>
    <string name="Bersabar">Bersabarlah</string>
    <string name="hadis22">HR. Bukhari no 1787</string>
    <string name="hadis23">HR. Bukhari no 1211</string>
    <string name="hadis24">HR. Baihaqi dalam As – Sunah al – Kubro no 8634</string>
    <string name="hadis25">Dishahihkan oleh Al – Albani dalam As – Shahihah no 2617</string>
    <string name="hadis26">HR. Bukhari no 1521</string>
    <string name="hadis27">Muslim no 1350</string>
    <string name="hadis28">HR. Bukhari no 1605</string>
    <string name="hadis29">Muslim no 1270</string>
    <string name="hadis30">HR. Bukhari no 1579</string>
    <string name="hadis31">HR. Muslim no 1297</string>
    <string name="hadis32">An – Nawawi; Al – Minhaaj Syarh Shahih Muslim 9/45</string>
    <string name="quran3">QS. Al – Baqarah : 197</string>
    <string name="hadis40">As – Sa’di; Tafsir Al – Kariim ar – Rahmaan hal 92</string>
    <string name="quran4">QS. Al – Baqarah : 197</string>
    <string name="hadis41">HR. Bukhari no 1521</string>
    <string name="hadis42">Ibnu Hazm rahimahullah; Al – Muhalla 5/197</string>
    <string name="hadis43">Fatawaa Ibnu Baaz 5/139</string>
    <string name="quran5">QS. Al – Baqarah : 197</string>
    <string name="quran6">HR. Tirmidzi no 2738</string>
    <string name="hadis45">HR. Bukhari no 1549</string>
    <string name="hadis47">Muslim no 1184</string>
    <string name="hadis48">HR. Ahmad no 16567</string>
    <string name="hadis49">Ibnu Majah no 2922</string>
    <string name="hadis50">Abu Dawud no 1814</string>
    <string name="hadis51">At – Tirmidzi no 829</string>
    <string name="hadis53">An – Nasaai no 2753</string>
    <string name="hadis54">HR. Muslim no 1247</string>
    <string name="hadis55">HR. Thabrani dan dishahihkan oleh Al – Albani dalam As – Shahihah no 1621</string>
    <string name="quran7">QS. Al – Baqarah : 196</string>
    <string name="quran8">QS. Al – Hajj : 29</string>
    <string name="catatan">Peringatan : Tidak semua pelanggaran harus dibayar dengan denda 3 keadaan seseorang yang melakukan larangan ihram a) Dalam keadaan lupa, tidak tahu, dipaksa, maka tidak ada dosa dan fidyah b) Jika melakukan dengan sengaja, namun karena ada uzur dan kebutuhan medesak, makai a tidak berdosa sama sekali hanya saja doa doharuskan membayar fidyah c) Jika melakukannya dengan sengaja dan tanpa adanya uzur atau tidak ada kebutuhan mendesak, makai a telah berdosa karena sengaja melanggar dan tentu dikenakan fidyah dan harus bertaubat kepada Allah</string>
    <string name="quran9">QS. Al – Baqarah : 125</string>
    <string name="quran10">QS. Al – Hajj : 26</string>
    <string name="hadis52">HR. Tirmidzi no 959 dan dishahihkan Al – Albani</string>
    <string name="hadis56">HR. Tirmidzi no 960</string>
    <string name="hadisdoa">HR. Ahmad no 15398</string>
    <string name="quran11">QS. Ali Imran : 96 – 97</string>
    <string name="quran12">QS. Al – Baqarah : 125</string>
    <string name="hadis57">HR. Muslim no 1218</string>
    <string name="hadis58">HR. Muslim no 2473</string>
    <string name="hadis59">HR. Ahmad no 15243</string>
    <string name="ihram_di_miqot">ihram di miqot</string>
    <string name="thowaf">thowaf</string>
    <string name="maqom_ibrahim">Maqom Ibrahim</string>
    <string name="minum_zamzam">Minum Zamzam</string>
    <string name="sa_i">Sa\'i</string>
    <string name="gundul_cukur_pendek">Gundul/Cukur Pendek</string>
    <string name="date">Date</string>
    <string name="txt_date">txt_date</string>
    <string name="search">lokasi anda</string>
    <string name="persiapan">persiapan haji</string>
    <string name="fiqihumroh">fiqih umrah</string>
    <string name="fiqihhaji">fiqih haji</string>
    <string name="lokasiziarah">lokasi ziarah</string>
    <string name="daftarisi">daftar isi</string>
    <string name="rate">rate</string>
    <string name="tentang">teantang</string>
    <string name="keutammanmekkah">keutamaan mekkah</string>
    <string name="kesalahanmaqom">Kesalahan Maqom</string>
    <string name="apamaqomibrahim">Apa maqom ibrahim</string>
    <string name="peringatan">Tidak semua pelanggaran harus dibayar dengan denda 3 keadaan seseorang yang melakukan larangan ihram a) Dalam keadaan lupa, tidak tahu, dipaksa, maka tidak ada dosa dan fidyah b) Jika melakukan dengan sengaja, namun karena ada uzur dan kebutuhan medesak, makai a tidak berdosa sama sekali hanya saja doa doharuskan membayar fidyah c) Jika melakukannya dengan sengaja dan tanpa adanya uzur atau tidak ada kebutuhan mendesak, makai a telah berdosa karena sengaja melanggar dan tentu dikenakan fidyah dan harus bertaubat kepada Allah</string>
    <string name="desk_sunah1">Ibnu Umar diriwayatkan oleh Al – Bazzaar dalam musnadnya no 6158</string>
    <string name="penjelasanmiqot">1. Miqat Makani : Dzulhalaigah, Al – Juhfah, Yalamlam, Qarn Al – Manazil, Dzatu ‘irq</string>
    <string name="miqotzamani">2. Miqat Zamani : Ibadah Haji, Ibadah Umroh</string>
    <string name="macamthowaf">1. Thawaf qudum ( kedatangan ) 2. Thawaf umroh 3. Thawaf ifadhah/ziarah/haji 4. Thawaf wada’ 5. Thawaf nadzar 6. Thawaf sunnah</string>
    <string name="desk_hajitamatt">Dimulai dengan umroh lalu melakukan haji ( syawal, dzulqo’dah, dzulhijah ) Wajib menyembelih hewan hadyu</string>
    <string name="deskifrad">Mengerjakan haji di musim haji dan tidak mengerjakan umroh Pelaksanaan haji :</string>
    <string name="ifrad">Tidak mencukur/menggundul rambut setelah thawaf qudum Jika sudah melaksanakan sai haji, ketika thawaf qudum setelah thawaf ifadhah tidak perlu sai haji lagi</string>
    <string name="desc_mekkah">Negeri Haram yang aman, dilarang menumpahkan darah, memotong pepohonan, dan tumbuhan, memburu hewan buruan, dan mengambil barang temuan kecuali untuk diumumkan</string>
    <string name="akselerasi">Kami dari akselerasi Programming PLP 7 Pondok Pesantren Fahim Quran Plus Tapos 1 Tenjolaya Bogor Jawa Barat.</string>
    <string name="terdiri">
        Kami terdiri dari:
    </string>
    <string name="Fadiya">
        \n lahir di Bandung, 17 September 2004. Fadiya berasal dari Pekanbaru, Riau.
        \n Dia sekarang duduk di kelas 10 SMA, angkatan 4 FQ.
        \n email : @fadiya07tsabita@gmail.com.
    </string>
    <string name="Safira">
        \n lahir di Pekanbaru, 2 Mei 2006. Safira atau biasa dipanggil Sapi berasal dari Jakarta Barat.
        \n Dia sekarang duduk di kelas 8 SMP, angkatan 3 FQ.
        \n IG : @sa_piraaaa
    </string>
    <string name="Anggi">
         \n Anggia Putri Noly, lahir di Pematang Siantar, 20 Januari 2004. Anggi berasal dari Depok.
        \n Dia sekarang duduk di kelas 10 SMA, angkatan 4 FQ.
        \n IG : @anggiiapn
        \n email : anggiaputrinoly@gmail.com
    </string>
    <string name="khalipah">
        \n lahir di Bekasi, 10 agustus 2000. Khalifa berasal dari Jakarta Timur.
        \n Dia sekarang duduk di kelas 8 SMP, angkatan 3 FQ.
        \n IG : @almairaaaz
        \n email : khalifaalmaira106@gmail.com
    </string>
    <string name="nay">
        5. Nayla
        \n Nayla Dhiaulhaq Hidayat, lahir di Duri, 28 september 2005. Nayla berasal dari Depok.
        \n Dia sekarang duduk di kelas 8 SMP, angkatan 3 FQ.
        \n IG : @nayla.hdyt
        \n email : nayladh76@gmail.com
    </string>
    <string name="ustzh"> Mereka di ampuh oleh Ustadzah Didah, guru IT yang berasal dari Bogor.
    </string>
    <string name="manfaat"> Semoga Aplikasi yang kami buat bermanfaat :) </string>
    <string name="ihram_penjelasan">penjelasan</string>
</resources>