<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keutamaan"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginLeft="100dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bagian1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc1"
            android:textSize="10dp"
            android:layout_marginLeft="25dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button
            android:id="@+id/persiapan_haji1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quran1"
            android:layout_marginTop="15dp"
            android:textSize="11sp"
            android:background="@drawable/custom4"
            android:textColor="@color/colorPrimaryDark"
            android:textAppearance="@style/Platform.MaterialComponents"/>

            <Button
                android:id="@+id/persiapan_haji2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hadis1"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:padding="5dp"
                android:background="@drawable/custom6"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="11sp"
                android:textAppearance="@style/Platform.MaterialComponents"/>
            <Button
                android:id="@+id/persiapan_haji3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hadis2"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:padding="5dp"
                android:background="@drawable/custom5"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="11sp"
                android:textAppearance="@style/Platform.MaterialComponents"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bagian2"
            android:layout_marginLeft="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc2"
            android:textSize="10dp"
            android:layout_marginLeft="25dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/persiapan_haji4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hadis3"
                android:layout_marginLeft="30dp"
                android:padding="5dp"
                android:background="@drawable/custom5"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="11sp"
                android:textAppearance="@style/Platform.MaterialComponents"/>
            <Button
                android:id="@+id/persiapan_haji5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hadis4"
                android:layout_marginLeft="30dp"
                android:padding="5dp"
                android:background="@drawable/custom4"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="11sp"
                android:textAppearance="@style/Platform.MaterialComponents"/>
            <!--<Button
                android:id="@+id/persiapan_haji6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hadis5"
                android:layout_marginLeft="30dp"
                android:padding="5dp"
                android:background="@drawable/custom6"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="11sp"
                android:textAppearance="@style/Platform.MaterialComponents"/>-->
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bagian3"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc3"
                android:textSize="10dp"
                android:layout_marginLeft="25dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hadis6"
                    android:layout_marginLeft="10dp"
                    android:padding="5dp"
                    android:background="@drawable/custom4"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="11sp"
                    android:textAppearance="@style/Platform.MaterialComponents"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/desc4"
                    android:textSize="11dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:text="@string/hadis7"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:background="@drawable/custom6"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="11sp"
                    android:textAppearance="@style/Platform.MaterialComponents"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bagian4"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc3"
                android:textSize="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"/>
            <Button
                android:id="@+id/persiapan_haji7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hadis8"
                android:layout_marginLeft="95dp"
                android:textSize="11sp"
                android:background="@drawable/custom4"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="@style/Platform.MaterialComponents"/>
            <!--<LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hadis9"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="15dp"
                    android:padding="5dp"
                    android:background="@drawable/custom5"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="11sp"
                    android:textAppearance="@style/Platform.MaterialComponents"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/desc5"
                    android:textSize="11dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hadis10"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:padding="5dp"
                    android:background="@drawable/custom6"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="11sp"
                    android:textAppearance="@style/Platform.MaterialComponents"/>
            </LinearLayout>-->
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bagian5"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc3"
                android:textSize="10dp"
                android:layout_marginLeft="25dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/persiapan_haji8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hadis11"
                    android:layout_marginLeft="20dp"
                    android:padding="5dp"
                    android:background="@drawable/custom4"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="11sp"
                    android:textAppearance="@style/Platform.MaterialComponents"/>

                <Button
                    android:id="@+id/persiapan_haji9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hadis12"
                    android:layout_marginLeft="25dp"
                    android:padding="5dp"
                    android:background="@drawable/custom6"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="11sp"
                    android:textAppearance="@style/Platform.MaterialComponents"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bagian6"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc3"
                android:textSize="10dp"
                android:layout_marginLeft="25dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/persiapan_haji10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hadis13"
                    android:layout_marginLeft="30dp"
                    android:padding="5dp"
                    android:background="@drawable/custom5"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="11sp"
                    android:textAppearance="@style/Platform.MaterialComponents"/>
                <Button
                    android:id="@+id/persiapan_haji11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hadis14"
                    android:layout_marginLeft="30dp"
                    android:padding="5dp"
                    android:background="@drawable/custom4"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="11sp"
                    android:textAppearance="@style/Platform.MaterialComponents"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bagian7"
                android:layout_marginLeft="20dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc3"
                android:textSize="10dp"
                android:layout_marginLeft="25dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hadis15"
                    android:layout_marginLeft="10dp"
                    android:padding="5dp"
                    android:background="@drawable/custom4"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="11sp"
                    android:textAppearance="@style/Platform.MaterialComponents"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/desc6"
                    android:textSize="11dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:text="@string/hadis16"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:background="@drawable/custom5"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="11sp"
                    android:textAppearance="@style/Platform.MaterialComponents"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>