<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hakikat Talbiyah"
            android:textStyle="bold"
            android:textSize="25dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="20dp"/>
        <Button
            android:id="@+id/bukhari1549"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hadis45"
            android:layout_marginLeft="95dp"
            android:layout_marginTop="50dp"
            android:textSize="11sp"
            android:background="@drawable/custom1"
            android:textColor="@color/colorPrimaryDark"
            android:textAppearance="@style/Platform.MaterialComponents"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="dan"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="10dp"/>
        <Button
            android:id="@+id/muslim1184"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hadis47"
            android:layout_marginLeft="95dp"
            android:layout_marginTop="20dp"
            android:textSize="11sp"
            android:background="@drawable/custom4"
            android:textColor="@color/colorPrimaryDark"
            android:textAppearance="@style/Platform.MaterialComponents"/>
    </LinearLayout>
    <Button
        android:id="@+id/ahmad16567"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hadis48"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:textSize="11sp"
        android:background="@drawable/custom2"
        android:textColor="@color/colorPrimaryDark"
        android:textAppearance="@style/Platform.MaterialComponents"/>
    <Button
        android:id="@+id/ibnumajah2922"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hadis49"
        android:layout_marginLeft="130dp"
        android:textSize="11sp"
        android:background="@drawable/custom4"
        android:textColor="@color/colorPrimaryDark"
        android:textAppearance="@style/Platform.MaterialComponents"/>
    <Button
        android:id="@+id/abudawud1814"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hadis50"
        android:layout_marginLeft="240dp"
        android:textSize="11sp"
        android:background="@drawable/custom4"
        android:textColor="@color/colorPrimaryDark"
        android:textAppearance="@style/Platform.MaterialComponents"/>
    <Button
        android:id="@+id/tirmidzi829"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hadis51"
        android:layout_marginLeft="26dp"
        android:textSize="11sp"
        android:background="@drawable/custom4"
        android:textColor="@color/colorPrimaryDark"
        android:textAppearance="@style/Platform.MaterialComponents"/>
    <Button
        android:id="@+id/annasaai2753"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hadis53"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:textSize="11sp"
        android:background="@drawable/custom5"
        android:textColor="@color/colorPrimaryDark"
        android:textAppearance="@style/Platform.MaterialComponents"/>
    <Button
        android:id="@+id/muslim1247"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hadis54"
        android:layout_marginTop="10dp"
        android:textSize="11sp"
        android:background="@drawable/custom5"
        android:textColor="@color/colorPrimaryDark"
        android:textAppearance="@style/Platform.MaterialComponents"/>
    <Button
        android:id="@+id/thabrani"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hadis55"
        android:layout_marginTop="10dp"
        android:textSize="11sp"
        android:background="@drawable/custom5"
        android:textColor="@color/colorPrimaryDark"
        android:textAppearance="@style/Platform.MaterialComponents"/>

</LinearLayout>